--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
           <script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=eQr8xSBiKVuSq6m0psK-Ey9TZ7rLzjRX-MpatyfFGQI"></script>
           </div>
         </div> -->
-        <div style="display: inline-block;">
+        <div>
           <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=46b0cb&w=a&t=tt&d=eQr8xSBiKVuSq6m0psK-Ey9TZ7rLzjRX-MpatyfFGQI&co=f8f8f8&cmn=e07200&ct=000000'></script>
         </div>
       </div>
